assets/css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

button {
    border: none;
    outline: none;
    background: transparent;
    font-family: inherit;
    cursor: pointer;
}

input {
    font-family: inherit;
    outline: none;
}

a {
    color: inherit;
    text-decoration: none;
}

li {
    list-style: none;
}

body {
    font-family: 'Poppins', sans-serif;
}

.container {
    width: min(calc(100% - 48px), 1296px);
    margin-inline: auto;
}

.header__top {
    position: relative;

    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-block: 10px;

    &::after {
        content: '';
        position: absolute;
        bottom: 0;
        left: 50%;

        width: 100vw;
        height: 100%;

        box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 60px -15px;
        transform: translateX(-50%);
    }
}

.header__menu-toggle {
    display: flex;
    align-items: center;
    width: 35px;
    height: 35px;
    padding-left: 6px;
    border: 1px solid #e9e9e9;
    border-radius: 5px;
}

.nav__list {
    display: flex;
    align-items: center;
}

.nav__link {
    display: flex;
    align-items: center;
    gap: 5.7px;
    padding-inline: 24.75px;

    font-size: 14px;
    font-weight: 500;
    letter-spacing: 0.48px;
}

.header__phone {
    display: flex;
    align-items: center;
    gap: 10.5px;
}

.header__phone-number {
    font-size: 15px;
    letter-spacing: 0.48px;
}

.header__main {
    display: flex;
    align-items: center;
}

.header__logo {
    width: 192px;
}

.search-form {
    display: flex;
    align-items: center;
    height: 45px;
    margin-inline: 74px auto;
}

.search-form__input {
    width: 424px;
    height: 100%;
    padding-inline: 16px;
    border: 1px solid #64b496;
    border-radius: 5px 0 0 5px;
}

.search-form__input::placeholder {
    color: #7a7a7a;
    font-size: 13px;
}

.search-form__category {
    height: 100%;
}

.search-form__category-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 13.5px;

    width: 130px;
    height: 100%;
    border: 1px solid #64b496;
    border-left: none;
    border-right: none;

    color: #212529;
    font-size: 13px;
}

.search-form__submit {
    display: flex;
    justify-content: center;
    align-items: center;

    width: 45px;
    height: 45px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;

    background: #2b2b2d;
    transition: background-color 0.2s ease;

    &:hover {
        background: #3a3a3d;
    }
}

.header__action {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 29.5px;
}

.header__action-btn {
    display: flex;
    align-items: center;
    gap: 12.5px;
    padding-block: 11px;
}

.header__action-title {
    font-size: 15px;
    font-weight: 500;
    letter-spacing: 0.48px;
}

